Tue Aug 16 20:51:27 UTC 2005 / Arnaud Quette <arnaud.quette@free.fr>

 - driver.list: add Soyntec Sekury C 500 and C 800 support using
   the powermust driver (contributed by Hanno Borns)
 - complete the NEWS files

2.0.3-pre1

Thu Aug 16 10:51:17 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - genericups type 22: add Gamatronic UPSs with alarm interface

   (Gamatronic, Nadav Moskovitch) [Alioth Patch #302015]

 - mge-shut: enhance ups.model retrieving, and bump release to 0.65
 - drivers now don't chroot to statepath if called for power off
   (using -k). This avoid unneeded failure to poweroff the UPS if
   /var is umounted (thanks to Gaspar Bakos).

Wed Jul 27 07:08:01 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - bcmxcp: typo fixes (length instead of lenght, thanks to Bill Richter)

Fri Jul 22 08:20:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - newhidups: minor change in interface claiming to avoid message like
   "process <pid> (<name>) did not claim interface X before use" upon
   device reopening, and bump driver release to 0.24

Thu Jul 21 14:02:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - add the missing LDFLAGS to gendb
 - add Belkin F6C1100-UNV to the driver.list (thanks to Dave Breiland)

Wed Jul 20 11:15:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - adapt newhidups to recognize units from Tripplite, Mustek and
   Unitek for development purpose

 - isbmex: fix various errors in formulas, add shutdown capability
   and bump driver release to 0.05

   (Ricardo Martinezgarza)

 - fentonups: fix the ID string for Sysgration UPGUARDS Pro650

   (Simon J. Rowe)

 - various fixes in the RedHat spec file

   (Thomas Jarosch)

Fri Jul  1 08:15:56 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - isbmex: revert back to B9600 instead of B2400, as it broke the
   communication, and bump the driver release to 0.04 (thanks to
   Ricardo Martinezgarza)